--- a/styles.css
+++ b/styles.css
@@ -263,7 +263,6 @@ h2 {
     margin: 40px 0;
 }
 
-/* Автор */
 .author-photo {
     width: 220px;
     height: 220px;
@@ -271,7 +270,9 @@ h2 {
     border-radius: 50%;
     z-index: 5;
     filter: drop-shadow(0 0 14px rgba(0,0,0,0.3));
+    margin-top: -50px; /* überlappt die Figur */
 }
+
 
 /* Фигурки */
 .character-left,
