--- a/styles.css
+++ b/styles.css
@@ -528,3 +528,9 @@ section h2 {
         max-width: 70% !important;
     }
 }
+/*  Mehr Platz unter den Buttons auf Mobile */
+@media (max-width: 700px) {
+    .winter-banner {
+        padding-bottom: 360px !important;
+    }
+}
