--- a/styles.css
+++ b/styles.css
@@ -552,9 +552,10 @@ h2 {
     text-decoration: underline;
 }
 /* Уменьшаем расстояние ТОЛЬКО после картинки следов */
-.section-img[src*="spuren"] {
-    margin-bottom: 2px !important; /* минимальный зазор */
+img[src*="spuren"] {
+    margin-bottom: 2px !important;
 }
+
 /* Исправление снега на iPhone */
 .snow-container {
     height: 100dvh !important;
