--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ body {
     text-align: center;
     margin-top: -5px;
     margin-bottom: 20px;
+    text-shadow: 0 0 12px #000, 0 0 30px #0d1d45;
 }
 
 /* Blaues Feld, falls genutzt */
